Convert FAQ page to tailwind
Because:
The site is converting the css to use tailwind

This commit:

* Add chevron down svg
* Add content-container-lg css class
* Update reveal_controller to toggle open and close classes on icon
* delete faq_items helper method
* delete faq_card partial
* remove bootstrap div classes
* inline faq card items into accordion view
* add system tests for faq click behaviour

--- a/app/javascript/layouts/layout.css
+++ b/app/javascript/layouts/layout.css
@@ -10,4 +10,8 @@
   .content-container {
     @apply max-w-screen-md mx-auto py-16 px-4 sm:pt-24 sm:pb-32 sm:px-6 lg:px-8;
   }
+
+  .content-container-lg {
+    @apply max-w-screen-lg mx-auto py-16 px-4 sm:pt-24 sm:pb-32 sm:px-6 lg:px-8;
+  }
 }
