--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,17 +1,9 @@
 <%= title('FAQ') %>
-
-<div class="StaticPagesController gradient">
-  <div class="container tmp-container-spacer">
-    <div class="row">
-      <div class="col-md-10 offset-md-1">
-        <h1 class="page-heading-title">Frequently Asked Questions</h1>
-        <%= render 'static_pages/faq/faq_accordion' %>
-      </div>
-    </div>
-
-    <%= render 'shared/bottom_cta',
+<div class="content-container-lg w-full">
+  <h1 class="page-heading-title">Frequently Asked Questions</h1>
+  <%= render 'static_pages/faq/faq_accordion' %>
+  <%= render 'shared/bottom_cta',
       button: chat_button,
       heading: 'Have a question?',
       sub_heading: 'Chat with our friendly Odin community in our Discord server!' %>
-  </div>
 </div>
